[package]
name = "dbcppp_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
anyhow = "1.0.61"
encoding = "0.2.33"
dbcppp_rs_sys = { path = "../rs_sys" }

[dev-dependencies]
random = "0.12.2"
rand = "0.8.5"
lazy_static = "1.4.0"
criterion = "0.3.6"

[[bench]]
name = "my_benchmark"
harness = false
path = "tests/microbench.rs"